--- a/src/app/modules/nav/component/nav/nav.component.html
+++ b/src/app/modules/nav/component/nav/nav.component.html
@@ -15,7 +15,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">
+            {{ "translateNav.firstLink" | translate }}
+          </a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -25,36 +27,56 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Projekte
+            {{ "translateNav.secondLinkDropdown.projects" | translate }}
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li>
+              <a class="dropdown-item" href="#">{{
+                "translateNav.secondLinkDropdown.eCommerceShop" | translate
+              }}</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#"
+                >{{
+                  "translateNav.secondLinkDropdown.housekeepingCalculator"
+                    | translate
+                }}
+              </a>
+            </li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Lebenslauf</a>
+          <a class="nav-link" href="#"> {{ "translateNav.cvc" | translate }}</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
         <input
           class="form-control me-2"
           type="search"
-          placeholder="Search"
+          placeholder=" {{ 'translateNav.buttonText.search' | translate }}"
           aria-label="Search"
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-success" type="submit">
+          {{ "translateNav.buttonText.search" | translate }}
+        </button>
       </form>
     </div>
   </div>
 </nav>
 <div class="language">
-  <select class="form-select" aria-label="Default select example">
-    <option selected>Select Language</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-    <option value="3">Three</option>
+  <select
+    class="form-select"
+    aria-label="Default select example"
+    #selectedLang
+    (change)="switchLang(selectedLang.value)"
+  >
+    <option
+      selected
+      *ngFor="let language of translate.getLangs()"
+      [selected]="language === translate.currentLang"
+    >
+      {{ language }}
+    </option>
   </select>
 </div>
