design and button directive

--- a/src/app/component/overview/overview.component.html
+++ b/src/app/component/overview/overview.component.html
@@ -1,2 +1,6 @@
-<app-nav></app-nav>
-<p>{{ "title" | translate }}</p>
+<div class="cover-container">
+  <app-nav></app-nav>
+  <div class="content">
+    <app-content></app-content>
+  </div>
+</div>
