--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,10 +5,17 @@
     box-sizing: border-box;
 }
 
+html.body {
+    width: 100vw;
+    max-width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
 :root {
      --green: lightgreen;
      --gray:rgb(233, 233, 233);
-
+    --bg-color:rgb(47, 47, 47);
 
      --font-weight: 600;
 
