--- a/src/app/modules/nav/component/nav/nav.component.html
+++ b/src/app/modules/nav/component/nav/nav.component.html
@@ -47,7 +47,9 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"> {{ "translateNav.cvc" | translate }}</a>
+          <a class="nav-link" routerLink="/cvc-overview">
+            {{ "translateNav.cvc" | translate }}</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact-overview">
