--- a/src/app/modules/cvc/component/cvc/cvc.component.html
+++ b/src/app/modules/cvc/component/cvc/cvc.component.html
@@ -23,6 +23,485 @@
           Peter Lakatos
         </div>
       </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.address" | translate }}
+          </strong>
+          Schottengasse 2, 90402 Nürnberg
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.tel" | translate }}
+          </strong>
+          <a href="tel:+4917642794462">+4917642794462</a>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.email" | translate }}
+          </strong>
+          <a href="mailto: peter.lakatos@outlook.de"
+            >peter.lakatos@outlook.de</a
+          >
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.nationality" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.nationality1" | translate }}
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.birthDate" | translate }}
+          </strong>
+          06.08.1986
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.gender" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.gender1" | translate }}
+        </div>
+      </div>
+
+      <div class="row mt-3 mb-3">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.desiredPosition" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.desiredPosition1" | translate }}
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <strong>
+            {{
+              "translateNav.cvc-overview.myCurrentTechnicalSkills" | translate
+            }}</strong
+          >
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          HTML5, CSS3, SASS, SCSS, Material Design, Bootstrap, JavaScript,
+          TypeScript, Angular, RXJS, NGRX, RESTful Api, Rest Api, NPM, JSON,
+          VSC, InteliJ.
+        </div>
+      </div>
+      <hr />
+
+      <div class="row mt mb-5">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.experience" | translate }}
+          </strong>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong></strong>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          01.01.23 - 05.05.23
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position1" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility1" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          SET / Hans-Bunte-Straße 41, 90431 Nürnberg
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          Software Engineering
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          01.06.22 - 31.12.22
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position1" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility1" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          OrgaCard Siemantel & Alt GmbH
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          Software Engineering
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          12.2021 - 04.2022
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position1" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility1" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          OrgaCard Siemantel & Alt GmbH
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          Software Engineering
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.continuingEducation" | translate }}
+          </strong>
+          09.2021 - 12.2021
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.trainingContent" | translate }}
+          </strong>
+          HTML5, CSS3, JavaScript, ECMA6, React.js, Git, GitHub
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.educationalInstitute" | translate }}
+          </strong>
+          <a href="https://www.cimdata.de/nuernberg/">Cimdata</a>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          05.2020 - 09.2021
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position2" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility2" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          SANA Treppenlifte AG. Löffelhozstraße 20, 90441 Nürnberg
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.TypeOfBusiness1" | translate }}
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          09.2016 - 02.2020
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position3" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility3" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          Münchener Straße 36, 84453 Mühldorf am Inn
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.TypeOfBusiness2" | translate }}
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          01.2016 - 08.2016
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position4" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility4" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          Wolf Tabakwaren Spielsee 6, 97447 Gerolzhofen
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.TypeOfBusiness3" | translate }}
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          2.2015 - 12.2015
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.position" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.position5" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.areasOfResponsibility" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.areasOfResponsibility5" | translate }}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.employerAddress" | translate }}
+          </strong>
+          PCA Rennbahnstraße 72 -74, 60528 Frankfurt am Main
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.TypeOfBusiness" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.TypeOfBusiness4" | translate }}
+        </div>
+      </div>
+
+      <hr />
+      <div class="row">
+        <div class="col">
+          <strong> Institution: </strong>
+          Ps Akademie
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.period" | translate }}
+          </strong>
+          01.2014 -02.2015
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.scul" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.scul1" | translate }}
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.socialSkills" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.socialSkills1" | translate }}
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col">
+          <strong>
+            {{ "translateNav.cvc-overview.additionally" | translate }}
+          </strong>
+          {{ "translateNav.cvc-overview.driverSlicense" | translate }}
+        </div>
+      </div>
     </div>
   </div>
 </div>
