--- a/src/app/modules/cvc/component/cvc/cvc.component.html
+++ b/src/app/modules/cvc/component/cvc/cvc.component.html
@@ -100,7 +100,7 @@
         <div class="col">
           HTML5, CSS3, SASS, SCSS, Material Design, Bootstrap, JavaScript,
           TypeScript, Angular, RXJS, NGRX, RESTful Api, Rest Api, NPM, JSON,
-          VSC, InteliJ.
+          Git, GitHub, GitLab, Jira, VSC, InteliJ.
         </div>
       </div>
       <hr />
