--- a/src/app/component/directive/send-form-button/send-form-button.component.html
+++ b/src/app/component/directive/send-form-button/send-form-button.component.html
@@ -1,3 +1,3 @@
-<button id="contact-button">
+<button id="contact-button" type="submit" (click)="sendEmail()">
   {{ "translateNav.buttonText.sendContactForm" | translate }}
 </button>
