send email modal

--- a/src/app/modules/contact/component/contact/contact.component.html
+++ b/src/app/modules/contact/component/contact/contact.component.html
@@ -35,7 +35,7 @@
             name="firstName"
             class="form-control"
             formControlName="name"
-            placeholder="{{ 'translateNav.contsctForm.name' | translate }}"
+            placeholder="* {{ 'translateNav.contsctForm.name' | translate }}"
           />
         </div>
         <div class="col">
@@ -47,7 +47,7 @@
             name="email"
             formControlName="email"
             class="form-control"
-            placeholder="{{ 'translateNav.contsctForm.email' | translate }}"
+            placeholder="* {{ 'translateNav.contsctForm.email' | translate }}"
           />
         </div>
       </div>
@@ -63,29 +63,76 @@
             name="message"
             rows="10"
             cols="10"
-            placeholder="{{
+            placeholder="* {{
               'translateNav.contsctForm.sendMessage' | translate
             }}"
           ></textarea>
         </div>
       </div>
+
       <div class="row">
         <div class="col">
-          <app-send-form-button
+          <button
+            type="submit"
+            id="contact-button"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            (click)="isFormValide()"
+          >
+            Send
+          </button>
+
+          <!-- Modal -->
+          <div
+            class="modal fade"
+            id="exampleModal"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1
+                    class="modal-title fs-5 fw-bold text-dark"
+                    id="exampleModalLabel"
+                  >
+                    {{ sendEMail }}
+                  </h1>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body text-dark">
+                  {{ sendEmailText }}
+                </div>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-dark"
+                    data-bs-dismiss="modal"
+                  >
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <app-send-form-button
             appSendForm
             [formsvalue]="this.form.value"
-          ></app-send-form-button>
+            [mailAnswer]="mailValide"
+            [mailAnswerWrong]="mailInvalid"
+            (click)="isFormValide()"
+          ></app-send-form-button> -->
         </div>
       </div>
-      <div class="row mt-3">
-        <div class="col">
-          <h3>{{ "translateNav.contsctForm.meLocation" | translate }}</h3>
-        </div>
-      </div>
+
       <div class="row mt-2">
-        <div class="col-1">
-          <app-location></app-location>
-        </div>
+        <div class="col-1"></div>
       </div>
     </form>
   </div>
