--- a/src/app/modules/contact/component/location/location.component.scss
+++ b/src/app/modules/contact/component/location/location.component.scss
@@ -1,10 +1,7 @@
 .iframe {
-   _width: 100vw;
-    height: 310px;
+   width: 80vw;
+   margin: auto;
+    _height: 310px;
 
-    iframe {
-        width: 75vw;
-        height: auto;
-        border-radius: .3rem;
-    }
+
 }
