--- a/src/app/component/directive/send-form-button/send-form-button.component.html
+++ b/src/app/component/directive/send-form-button/send-form-button.component.html
@@ -1,3 +1,9 @@
-<button id="contact-button" type="submit" (click)="sendEmail()">
+<button
+  id="contact-button"
+  type="submit"
+  (click)="sendEmail()"
+  data-bs-toggle="modal"
+  data-bs-target="#exampleModal"
+>
   {{ "translateNav.buttonText.sendContactForm" | translate }}
 </button>
