--- a/src/app/modules/nav/component/nav/nav.component.html
+++ b/src/app/modules/nav/component/nav/nav.component.html
@@ -31,19 +31,19 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">{{
+              <a class="dropdown-item" href="">{{
                 "translateNav.secondLinkDropdown.eCommerceShop" | translate
               }}</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#"
+              <a class="dropdown-item" href=""
                 >{{
                   "translateNav.secondLinkDropdown.housekeepingCalculator"
                     | translate
                 }}
               </a>
             </li>
-            <li><hr class="dropdown-divider" /></li>
+            <li></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -57,17 +57,6 @@
           >
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder=" {{ 'translateNav.buttonText.search' | translate }}"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit">
-          {{ "translateNav.buttonText.search" | translate }}
-        </button>
-      </form>
     </div>
   </div>
 </nav>
