--- a/src/app/modules/nav/component/nav/nav.component.html
+++ b/src/app/modules/nav/component/nav/nav.component.html
@@ -31,9 +31,13 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="">{{
-                "translateNav.secondLinkDropdown.eCommerceShop" | translate
-              }}</a>
+              <a
+                class="dropdown-item"
+                href="https://e-commerce-liard-pi.vercel.app/overview"
+                >{{
+                  "translateNav.secondLinkDropdown.eCommerceShop" | translate
+                }}</a
+              >
             </li>
             <li>
               <a class="dropdown-item" href=""
