add project personal-management-order

--- a/src/app/modules/nav/component/nav/nav.component.html
+++ b/src/app/modules/nav/component/nav/nav.component.html
@@ -30,15 +30,16 @@
             {{ "translateNav.secondLinkDropdown.projects" | translate }}
           </a> -->
           <ul class="dropdown-menu">
-            <!-- <li>
+            <li>
               <a
                 class="dropdown-item"
-                href="https://e-commerce-liard-pi.vercel.app/overview"
+                href="https://personal-management-kappa.vercel.app/dashboard-overview"
                 >{{
-                  "translateNav.secondLinkDropdown.eCommerceShop" | translate
+                  "translateNav.secondLinkDropdown.personnelAndOrderManagement"
+                    | translate
                 }}</a
               >
-            </li> -->
+            </li>
             <!-- <li>
               <a class="dropdown-item" href=""
                 >{{
